--- a/MeuProjeto/src/app/institucional/contato/contato.component.html
+++ b/MeuProjeto/src/app/institucional/contato/contato.component.html
@@ -1,31 +1,44 @@
-<!-- referência: https://bootsnipp.com/snippets/7nmOW -->
+<!-- Page Content -->
+<div class="container main-container">
 
-<div class="container contact-form">
-    <div class="contact-image">
-        <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
-    </div>
-    <form>
-        <h3>Fale conosco</h3>
-       <div class="row">
-            <div class="col-md-6">
+    <!-- Jumbotron Header -->
+    <header class="jumbotron my-4">
+        <h1 class="display-3">Contato!</h1>
+        <p class="lead">Aqui você pode colocar um mapa para informar seu local de trabalho.</p>
+    </header>
+
+    <form class="mbr-form">
+        <div class="row row-sm-offset">
+            <div class="col-md-4 multi-horizontal" data-for="name">
                 <div class="form-group">
-                    <input type="text" name="txtName" class="form-control" placeholder="Seu nome" value="" />
-                </div>
-                <div class="form-group">
-                    <input type="text" name="txtEmail" class="form-control" placeholder="Seu E-mail *" value="" />
-                </div>
-                <div class="form-group">
-                    <input type="text" name="txtPhone" class="form-control" placeholder="Seu Telefone *" value="" />
-                </div>
-                <div class="form-group">
-                    <input id="btnSubmit" type="button" name="btnSubmit" class="btn btn-primary" value="Enviar" />
+                    <label class="form-control-label mbr-fonts-style display-7" for="name-form1-2w">Nome</label>
+                    <input type="text" class="form-control" name="name" data-form-field="Name" required=""
+                        id="name-form1-2w">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4 multi-horizontal" data-for="email">
                 <div class="form-group">
-                    <textarea name="txtMsg" class="form-control" placeholder="Sua mensagem" style="width: 100%; height: 150px;"></textarea>
+                    <label class="form-control-label mbr-fonts-style display-7" for="email-form1-2w">E-mail</label>
+                    <input type="email" class="form-control" name="email" data-form-field="Email" required=""
+                        id="email-form1-2w">
+                </div>
+            </div>
+            <div class="col-md-4 multi-horizontal" data-for="phone">
+                <div class="form-group">
+                    <label class="form-control-label mbr-fonts-style display-7" for="phone-form1-2w">Telefone</label>
+                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="phone-form1-2w">
                 </div>
             </div>
         </div>
+        <div class="form-group" data-for="message">
+            <label class="form-control-label mbr-fonts-style display-7" for="message-form1-2w">Mensagem</label>
+            <textarea type="text" class="form-control" name="message" rows="7" data-form-field="Message"
+                id="message-form1-2w"></textarea>
+        </div>
+
+        <span class="input-group-btn">
+            <button href="" type="submit" class="btn btn-primary btn-form display-4">Enviar</button>
+        </span>
     </form>
 </div>
+<br>
