--- a/MeuProjeto/src/app/navegacao/menu/menu.component.html
+++ b/MeuProjeto/src/app/navegacao/menu/menu.component.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/produto']">Produtos</a>
+                    <a class="nav-link" [routerLink]="['/produtos']">Produtos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/sobre']">Sobre</a>
